# NanoMask

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  architecture.md  backlog.md  backlog_v2.md  backlog_v3.md  build.zig  build.zig.zon  diff.patch  entities.txt  local_changes.patch  phase1_backlog.md  test_output.txt  test_structured.nmentity
.githooks/: pre-push
compatibility/: compatibility-matrix.json
docs/: admin-openapi.yaml  architecture.md  brand_kit.md  business_plan.md  commercial_offers.md  developer_integrations.md  document_workflow.md  failure_behavior.md  fedramp_readiness.md  hipaa_baa_template.md  hipaa_safe_harbor_coverage.json  hipaa_safe_harbor_coverage.md  mtls_guide.md  pentest_findings.md  release_signing.md  security_packet.md  security_review_checklist.md  semantic_cache.md  streaming_behavior.md  threat_model.md  tls_strategy.md
evaluation/: README.md  benchmark-card.md  compatibility-summary.md  pilot-runbook.md  pilot-success-criteria.md  report-only-workflow.md
examples/: fluentbit_sidecar.yaml  grafana_dashboard.json  sidecar-pod.yaml  standalone-deployment.yaml
sdk/: README.md
sdk/python/: README.md  pyproject.toml
sdk/python/nanomask/: __init__.py  client.py
sdk/python/tests/: test_nanomask.py
site/: index.html
src/: admin.zig  bench.zig  compat_matrix.zig  compat_test.zig  config.zig  entity_mask.zig  file_watcher.zig  fuzzy_match.zig  http_util.zig  main.zig  proof_report.zig  proxy.zig  redact.zig  root.zig  test_api.zig  test_http.zig  test_reader.zig  tls.zig  versioned_entity_set.zig
(+132 files in other folders)
