[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nanomask-openai"
version = "0.1.0"
description = "Thin NanoMask helpers for OpenAI-compatible Python clients"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["openai>=1.0.0"]
authors = [{ name = "NanoMask" }]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nanomask*"]
